fix: adjust hero h1 font size for improved readability

--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ iframe.iframe-facebook {
     top: 20px; 
   }
   .hero h1 {
-    font-size: clamp(1.0rem, 3vw, 3rem);
+    font-size: clamp(2rem, 3vw, 3rem);
     }
   iframe.iframe-facebook {    
     margin-top: 20px;
